// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Workflows
  api={EmptyAPI {}}
>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <div
            className="navbar-brand d-flex flex-row align-items-center"
          >
            <img
              className="logo"
              src="/static/images/logo.svg"
            />
            <h1
              className="mb-0 mr-auto logo-1"
            >
              <a
                href="/workflows"
              >
                Workbench
              </a>
            </h1>
          </div>
          <div
            className="d-flex flex-row align-items-center"
          >
            <a
              className="t-white nav-link content-2"
              href="http://cjworkbench.org/index.php/blog/"
            >
              Learn
            </a>
            <WfHamburgerMenu>
              <UncontrolledDropdown>
                <Dropdown
                  isOpen={false}
                  tag="div"
                  toggle={[Function]}
                >
                  <div
                    className="dropdown"
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      className="navbar-context-button"
                      color="secondary"
                      data-toggle="dropdown"
                    >
                      <Button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="navbar-context-button"
                        color="secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="navbar-context-button btn btn-secondary"
                          data-toggle="dropdown"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="button-icon icon-more-white"
                          />
                        </button>
                      </Button>
                    </DropdownToggle>
                    <DropdownMenu
                      right={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu dropdown-menu-right"
                        role="menu"
                        tabIndex="-1"
                      >
                        <div>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="/account/logout"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="/account/logout"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Logout
                              </span>
                            </a>
                          </DropdownItem>
                        </div>
                      </div>
                    </DropdownMenu>
                  </div>
                </Dropdown>
              </UncontrolledDropdown>
            </WfHamburgerMenu>
          </div>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <div
                className="button-blue action-button new-workflow-button"
                onClick={[Function]}
              >
                New
              </div>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
        style={
          Object {
            "backgroundColor": "#f6f6f6",
          }
        }
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title title-3 t-m-gray workflows-card-title"
          >
            WORKFLOWS
          </h3>
          <div
            className="workflows-sub-list"
          />
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;

exports[`renders correctly 2`] = `
<Workflows
  api={EmptyAPI {}}
>
  <div>
    <WorkflowListNavBar>
      <div>
        <nav
          className="navbar"
        >
          <div
            className="navbar-brand d-flex flex-row align-items-center"
          >
            <img
              className="logo"
              src="/static/images/logo.svg"
            />
            <h1
              className="mb-0 mr-auto logo-1"
            >
              <a
                href="/workflows"
              >
                Workbench
              </a>
            </h1>
          </div>
          <div
            className="d-flex flex-row align-items-center"
          >
            <a
              className="t-white nav-link content-2"
              href="http://cjworkbench.org/index.php/blog/"
            >
              Learn
            </a>
            <WfHamburgerMenu>
              <UncontrolledDropdown>
                <Dropdown
                  isOpen={false}
                  tag="div"
                  toggle={[Function]}
                >
                  <div
                    className="dropdown"
                  >
                    <DropdownToggle
                      aria-haspopup={true}
                      className="navbar-context-button"
                      color="secondary"
                      data-toggle="dropdown"
                    >
                      <Button
                        aria-expanded={false}
                        aria-haspopup="true"
                        className="navbar-context-button"
                        color="secondary"
                        data-toggle="dropdown"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="navbar-context-button btn btn-secondary"
                          data-toggle="dropdown"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="button-icon icon-more-white"
                          />
                        </button>
                      </Button>
                    </DropdownToggle>
                    <DropdownMenu
                      right={true}
                      tag="div"
                    >
                      <div
                        aria-hidden={true}
                        className="dropdown-menu dropdown-menu-right"
                        role="menu"
                        tabIndex="-1"
                      >
                        <div>
                          <DropdownItem
                            className="dropdown-menu-item"
                            href="/account/logout"
                            tag="a"
                            toggle={true}
                          >
                            <a
                              className="dropdown-menu-item dropdown-item"
                              href="/account/logout"
                              onClick={[Function]}
                              tabIndex="0"
                            >
                              <span
                                className="t-d-gray content-3 ml-3"
                              >
                                Logout
                              </span>
                            </a>
                          </DropdownItem>
                        </div>
                      </div>
                    </DropdownMenu>
                  </div>
                </Dropdown>
              </UncontrolledDropdown>
            </WfHamburgerMenu>
          </div>
        </nav>
      </div>
    </WorkflowListNavBar>
    <div
      className="container workflows-container"
    >
      <div
        className="row justify-content-md-center"
      >
        <div
          className="col col-lg-2"
        />
        <div
          className="col-12 col-md-auto"
        >
          <div
            className="input-group"
          >
            <span
              className="input-group-btn"
            >
              <div
                className="button-blue action-button new-workflow-button"
                onClick={[Function]}
              >
                New
              </div>
            </span>
          </div>
        </div>
        <div
          className="col col-lg-2"
        />
      </div>
      <div
        className="card w-75 mx-auto workflows-list"
        style={
          Object {
            "backgroundColor": "#f6f6f6",
          }
        }
      >
        <div
          className="card-block"
        >
          <h3
            className="card-title title-3 t-m-gray workflows-card-title"
          >
            WORKFLOWS
          </h3>
          <div
            className="workflows-sub-list"
          >
            <a
              className="workflow-link card card-block item-test-class workflow-in-list"
              href="/workflows/1"
            >
              <div
                className="my-auto d-flex justify-content-between align-items-center"
              >
                <div
                  className="wf-id-stack"
                >
                  <div
                    className="wf-id-name t-d-gray title-4"
                  >
                    Charting
                  </div>
                  <div
                    className="wf-id-meta"
                    onClick={[Function]}
                  >
                    <WorkflowMetadata
                      api={EmptyAPI {}}
                      inWorkflowList={true}
                      isPublic={true}
                      workflow={
                        Object {
                          "id": 1,
                          "name": "Charting",
                          "public": true,
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <ul
                          className="list-inline workflow-meta content-3 t-f-blue"
                        >
                          <li
                            className="list-inline-item content-3 "
                          >
                            Updated 
                            now
                          </li>
                          <li
                            className="list-inline-item test-button content-3 "
                            onClick={[Function]}
                          >
                            <u>
                              public
                            </u>
                          </li>
                        </ul>
                      </div>
                    </WorkflowMetadata>
                  </div>
                </div>
                <div
                  className="menu-test-class"
                  onClick={[Function]}
                >
                  <WfContextMenu
                    deleteWorkflow={[Function]}
                  >
                    <UncontrolledDropdown>
                      <Dropdown
                        isOpen={false}
                        tag="div"
                        toggle={[Function]}
                      >
                        <div
                          className="dropdown"
                        >
                          <DropdownToggle
                            aria-haspopup={true}
                            className="context-button"
                            color="secondary"
                            data-toggle="dropdown"
                          >
                            <Button
                              aria-expanded={false}
                              aria-haspopup="true"
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                              onClick={[Function]}
                              tag="button"
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button btn btn-secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                type="button"
                              >
                                <div
                                  className="menu-icon icon-more module-menu-icon"
                                />
                              </button>
                            </Button>
                          </DropdownToggle>
                          <DropdownMenu
                            className="dropdown-menu"
                            right={true}
                            tag="div"
                          >
                            <div
                              aria-hidden={true}
                              className="dropdown-menu dropdown-menu dropdown-menu-right"
                              role="menu"
                              tabIndex="-1"
                            >
                              <DropdownItem
                                className="dropdown-menu-item test-share-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-share-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-share menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Share
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-duplicate-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-duplicate-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-duplicate menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Duplicate
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-delete-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-delete-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-bin menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Delete
                                  </span>
                                </button>
                              </DropdownItem>
                            </div>
                          </DropdownMenu>
                        </div>
                      </Dropdown>
                    </UncontrolledDropdown>
                  </WfContextMenu>
                </div>
              </div>
            </a>
            <a
              className="workflow-link card card-block item-test-class workflow-in-list"
              href="/workflows/7"
            >
              <div
                className="my-auto d-flex justify-content-between align-items-center"
              >
                <div
                  className="wf-id-stack"
                >
                  <div
                    className="wf-id-name t-d-gray title-4"
                  >
                    Messy data cleanup
                  </div>
                  <div
                    className="wf-id-meta"
                    onClick={[Function]}
                  >
                    <WorkflowMetadata
                      api={EmptyAPI {}}
                      inWorkflowList={true}
                      isPublic={false}
                      workflow={
                        Object {
                          "id": 7,
                          "name": "Messy data cleanup",
                          "public": false,
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <ul
                          className="list-inline workflow-meta content-3 t-f-blue"
                        >
                          <li
                            className="list-inline-item content-3 "
                          >
                            Updated 
                            now
                          </li>
                          <li
                            className="list-inline-item test-button content-3 "
                            onClick={[Function]}
                          >
                            <u>
                              private
                            </u>
                          </li>
                        </ul>
                      </div>
                    </WorkflowMetadata>
                  </div>
                </div>
                <div
                  className="menu-test-class"
                  onClick={[Function]}
                >
                  <WfContextMenu
                    deleteWorkflow={[Function]}
                  >
                    <UncontrolledDropdown>
                      <Dropdown
                        isOpen={false}
                        tag="div"
                        toggle={[Function]}
                      >
                        <div
                          className="dropdown"
                        >
                          <DropdownToggle
                            aria-haspopup={true}
                            className="context-button"
                            color="secondary"
                            data-toggle="dropdown"
                          >
                            <Button
                              aria-expanded={false}
                              aria-haspopup="true"
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                              onClick={[Function]}
                              tag="button"
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button btn btn-secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                type="button"
                              >
                                <div
                                  className="menu-icon icon-more module-menu-icon"
                                />
                              </button>
                            </Button>
                          </DropdownToggle>
                          <DropdownMenu
                            className="dropdown-menu"
                            right={true}
                            tag="div"
                          >
                            <div
                              aria-hidden={true}
                              className="dropdown-menu dropdown-menu dropdown-menu-right"
                              role="menu"
                              tabIndex="-1"
                            >
                              <DropdownItem
                                className="dropdown-menu-item test-share-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-share-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-share menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Share
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-duplicate-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-duplicate-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-duplicate menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Duplicate
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-delete-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-delete-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-bin menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Delete
                                  </span>
                                </button>
                              </DropdownItem>
                            </div>
                          </DropdownMenu>
                        </div>
                      </Dropdown>
                    </UncontrolledDropdown>
                  </WfContextMenu>
                </div>
              </div>
            </a>
            <a
              className="workflow-link card card-block item-test-class workflow-in-list"
              href="/workflows/8"
            >
              <div
                className="my-auto d-flex justify-content-between align-items-center"
              >
                <div
                  className="wf-id-stack"
                >
                  <div
                    className="wf-id-name t-d-gray title-4"
                  >
                    Document search
                  </div>
                  <div
                    className="wf-id-meta"
                    onClick={[Function]}
                  >
                    <WorkflowMetadata
                      api={EmptyAPI {}}
                      inWorkflowList={true}
                      isPublic={true}
                      workflow={
                        Object {
                          "id": 8,
                          "name": "Document search",
                          "public": true,
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <ul
                          className="list-inline workflow-meta content-3 t-f-blue"
                        >
                          <li
                            className="list-inline-item content-3 "
                          >
                            Updated 
                            now
                          </li>
                          <li
                            className="list-inline-item test-button content-3 "
                            onClick={[Function]}
                          >
                            <u>
                              public
                            </u>
                          </li>
                        </ul>
                      </div>
                    </WorkflowMetadata>
                  </div>
                </div>
                <div
                  className="menu-test-class"
                  onClick={[Function]}
                >
                  <WfContextMenu
                    deleteWorkflow={[Function]}
                  >
                    <UncontrolledDropdown>
                      <Dropdown
                        isOpen={false}
                        tag="div"
                        toggle={[Function]}
                      >
                        <div
                          className="dropdown"
                        >
                          <DropdownToggle
                            aria-haspopup={true}
                            className="context-button"
                            color="secondary"
                            data-toggle="dropdown"
                          >
                            <Button
                              aria-expanded={false}
                              aria-haspopup="true"
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                              onClick={[Function]}
                              tag="button"
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button btn btn-secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                type="button"
                              >
                                <div
                                  className="menu-icon icon-more module-menu-icon"
                                />
                              </button>
                            </Button>
                          </DropdownToggle>
                          <DropdownMenu
                            className="dropdown-menu"
                            right={true}
                            tag="div"
                          >
                            <div
                              aria-hidden={true}
                              className="dropdown-menu dropdown-menu dropdown-menu-right"
                              role="menu"
                              tabIndex="-1"
                            >
                              <DropdownItem
                                className="dropdown-menu-item test-share-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-share-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-share menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Share
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-duplicate-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-duplicate-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-duplicate menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Duplicate
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-delete-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-delete-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-bin menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Delete
                                  </span>
                                </button>
                              </DropdownItem>
                            </div>
                          </DropdownMenu>
                        </div>
                      </Dropdown>
                    </UncontrolledDropdown>
                  </WfContextMenu>
                </div>
              </div>
            </a>
            <a
              className="workflow-link card card-block item-test-class workflow-in-list"
              href="/workflows/9"
            >
              <div
                className="my-auto d-flex justify-content-between align-items-center"
              >
                <div
                  className="wf-id-stack"
                >
                  <div
                    className="wf-id-name t-d-gray title-4"
                  >
                    Visualization
                  </div>
                  <div
                    className="wf-id-meta"
                    onClick={[Function]}
                  >
                    <WorkflowMetadata
                      api={EmptyAPI {}}
                      inWorkflowList={true}
                      isPublic={false}
                      workflow={
                        Object {
                          "id": 9,
                          "name": "Visualization",
                          "public": false,
                        }
                      }
                    >
                      <div
                        className=""
                      >
                        <ul
                          className="list-inline workflow-meta content-3 t-f-blue"
                        >
                          <li
                            className="list-inline-item content-3 "
                          >
                            Updated 
                            now
                          </li>
                          <li
                            className="list-inline-item test-button content-3 "
                            onClick={[Function]}
                          >
                            <u>
                              private
                            </u>
                          </li>
                        </ul>
                      </div>
                    </WorkflowMetadata>
                  </div>
                </div>
                <div
                  className="menu-test-class"
                  onClick={[Function]}
                >
                  <WfContextMenu
                    deleteWorkflow={[Function]}
                  >
                    <UncontrolledDropdown>
                      <Dropdown
                        isOpen={false}
                        tag="div"
                        toggle={[Function]}
                      >
                        <div
                          className="dropdown"
                        >
                          <DropdownToggle
                            aria-haspopup={true}
                            className="context-button"
                            color="secondary"
                            data-toggle="dropdown"
                          >
                            <Button
                              aria-expanded={false}
                              aria-haspopup="true"
                              className="context-button"
                              color="secondary"
                              data-toggle="dropdown"
                              onClick={[Function]}
                              tag="button"
                            >
                              <button
                                aria-expanded={false}
                                aria-haspopup="true"
                                className="context-button btn btn-secondary"
                                data-toggle="dropdown"
                                onClick={[Function]}
                                type="button"
                              >
                                <div
                                  className="menu-icon icon-more module-menu-icon"
                                />
                              </button>
                            </Button>
                          </DropdownToggle>
                          <DropdownMenu
                            className="dropdown-menu"
                            right={true}
                            tag="div"
                          >
                            <div
                              aria-hidden={true}
                              className="dropdown-menu dropdown-menu dropdown-menu-right"
                              role="menu"
                              tabIndex="-1"
                            >
                              <DropdownItem
                                className="dropdown-menu-item test-share-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-share-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-share menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Share
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-duplicate-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-duplicate-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-duplicate menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Duplicate
                                  </span>
                                </button>
                              </DropdownItem>
                              <DropdownItem
                                className="dropdown-menu-item test-delete-button"
                                onClick={[Function]}
                                tag="button"
                                toggle={true}
                              >
                                <button
                                  className="dropdown-menu-item test-delete-button dropdown-item"
                                  onClick={[Function]}
                                  tabIndex="0"
                                  type="button"
                                >
                                  <i
                                    className="icon-bin menu-icon"
                                  />
                                  <span
                                    className="t-d-gray content-3 ml-3"
                                  >
                                    Delete
                                  </span>
                                </button>
                              </DropdownItem>
                            </div>
                          </DropdownMenu>
                        </div>
                      </Dropdown>
                    </UncontrolledDropdown>
                  </WfContextMenu>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</Workflows>
`;
